dev : fix small and style card and style scrollbar for pagination

--- a/src/components/Pagination/pagintaion.module.scss
+++ b/src/components/Pagination/pagintaion.module.scss
@@ -4,7 +4,9 @@
 @import "../../assets/scss/mixins/text.scss";
 
 .pagination {
+  @include flexDefault;
   padding: 30px 0;
+  overflow-x: scroll;
 
   &Button:not(:last-child) {
     margin-right: 5px;
@@ -39,4 +41,22 @@
     background-color: $color-black;
     color: $color-white;
   }
+}
+
+.pagination::-webkit-scrollbar {
+  width: 10px;
+  background-color: $color-white;
+}
+
+.pagination::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: $color-black;
+  cursor: pointer;
+}
+
+.pagination::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  background-color: $color-white;
+  cursor: pointer;
 }
